--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vite": "^6.0.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.1",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3"
   }
 }
